# B4M35PAG

./: .gitignore  README.md
hw/01_data-storage-optimalization-OMP/: .gitignore  README.md
hw/01_data-storage-optimalization-OMP/cmake-openmp/: CMakeLists.txt
hw/01_data-storage-optimalization-OMP/src/: Storage.cpp
hw/02_heat-defusion-MPI/working/output/: example.ppm  large_1.ppm
hw/02_heat-defusion-MPI/working/src/: HeatDiffusion.cpp
hw/03_Bratley-Algo/assets/master_slave/: run.sh
hw/03_Bratley-Algo/assets/master_slave/cmake/: CMakeLists.txt
hw/03_Bratley-Algo/assets/master_slave/src/: DebuggingTools.h  MasterSlave.cpp
hw/03_Bratley-Algo/working/: .gitignore  README.md
hw/03_Bratley-Algo/working/cmake/: CMakeLists.txt
hw/03_Bratley-Algo/working/src/: Main.cpp
hw/04_mdp/: .gitignore  InstanceGenerator.py  hw4_skeleton.py  main.py
hw/05_bonus-metacentrum/: .gitignore  CMakeLists.txt  HeatDiffusion.cpp  Storage.cpp  runner-mid.sh  runner-pro.sh  runner.sh  runner.sh.e19709534  runner.sh.e19709545  runner.sh.e19709547  runner.sh.e19709556
hw/05_bonus-metacentrum/assets/metacentrum_tutorial/: readme.md  runner.sh
hw/05_bonus-metacentrum/output/: large_1.ppm
hw/05_bonus-metacentrum/results/: README.md  results-performance-1-small.txt  results-performance-1.txt  results-performance-16.txt  results-performance-2-small.txt  results-performance-32-small.txt  results-performance-32.txt  results-performance-4-small.txt  results-performance-4.txt  results-performance-64-small.txt  results-performance-8-small.txt  results-scalability-128.txt  results-scalability-256.txt  results-scalability-800.txt
hw/05_bonus-metacentrum/results/big-cluster/: results-pro-performance-1.txt  results-pro-performance-16.txt  results-pro-performance-2.txt  results-pro-performance-32.txt  results-pro-performance-4.txt  results-pro-performance-64.txt  results-pro-performance-8.txt  results-pro-scalability-1600.txt  results-pro-scalability-256.txt  results-pro-scalability-3200.txt  results-pro-scalability-800.txt
hw/05_bonus-metacentrum/results/small-cluster/: results-mid-performance-1.txt  results-mid-performance-16.txt  results-mid-performance-2.txt  results-mid-performance-32.txt  results-mid-performance-4.txt  results-mid-performance-64.txt  results-mid-performance-8.txt  results-mid-scalability-128.txt  results-mid-scalability-1600.txt  results-mid-scalability-256.txt  results-mid-scalability-3200.txt  results-mid-scalability-800.txt  results-performance-16-small.txt  results-performance-2.txt  results-performance-64.txt  results-performance-8.txt  results-pro-performance-1.txt  results-pro-performance-16.txt  results-pro-performance-2.txt  results-pro-performance-32.txt  results-pro-performance-4.txt  results-pro-performance-64.txt  results-pro-performance-8.txt  results-pro-scalability-128.txt  results-pro-scalability-1600.txt  results-pro-scalability-256.txt  results-pro-scalability-3200.txt  results-pro-scalability-800.txt  results-scalability-1600.txt  results-scalability-3200.txt
labs/01_introduction/assets/: introduction.pdf:Zone.Identifier  introduction_helloworlds.zip:Zone.Identifier
labs/01_introduction/working/cmake/: CMakeLists.txt
labs/01_introduction/working/src/: HelloWorldMPI.cpp  HelloWorldOpenMP.cpp
labs/02_openMP/working/src/: MonteCarloPi.cpp  VectorNormalization.cpp
labs/03_openPM/working/: run.sh
labs/03_openPM/working/cmake/: CMakeLists.txt
labs/03_openPM/working/src/: HelloWorld.cpp  MergeSort.cpp  SendAndReceive.cpp  Utils.hpp  VectorNormalization.cpp
labs/03_openPM/working/src/demo_codes/: BroadcastDemo.cpp  GatherDemo.cpp  ReduceDemo.cpp  ScatterDemo.cpp
labs/05_algorithms/assets/: run.sh
labs/05_algorithms/assets/cmake/: CMakeLists.txt
labs/05_algorithms/assets/src/MPI_template/: GaussEliminationCyclic.cpp
labs/05_algorithms/assets/src/OpenMP_template/: MatrixMultiplication.cpp
labs/05_algorithms/assets/src/solutions/: GaussEliminationBlock.cpp  GaussEliminationCyclic.cpp  LUDecomposition.cpp  MatrixMultiplication.cpp
labs/05_algorithms/working/src/MPI_template/: GaussEliminationBlock.cpp  GaussEliminationCyclic.cpp
labs/05_algorithms/working/src/OpenMP_template/: LUDecomposition.cpp  MatrixMultiplication.cpp
labs/09_numba/working/: numba_1_skeletons.ipynb
labs/10_numba/working/: numba_2_examples.ipynb  numba_2_skeletons.ipynb
